The map is no longer displayed when bringing the app in foreground
Categories
(Core :: Graphics: Canvas2D, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox75 | --- | wontfix |
| firefox76 | --- | wontfix |
| firefox77 | --- | verified |
People
(Reporter: karlcow, Assigned: sotaro)
References
()
Details
(Keywords: regression, Whiteboard: wr-android)
Attachments
(1 file)
In general component because I'm not sure where this should go.
- with Fenix (Firefox Preview) Nightly 76
- Go to https://www.healthmap.org/covid-19/
- Switch co another app (eg. Chrome)
- Bring Fenix in foreground.
Expected Behavior:
The map is displayed.
Actual Behavior:
The map is no longer displayed.
When panning, the map is displayed.
a firefox profile on mobile for it.
https://bit.ly/2vUxrOq
around 5s, I'm panning the map
around 12s, I'm switching to chrome
around 18s, I'm switching back to firefox
around 23s, I'm panning the map
The map is part of a canvas element
<div class="mapboxgl-canvas-container mapboxgl-interactive mapboxgl-touch-drag-pan mapboxgl-touch-zoom-rotate">
<canvas class="mapboxgl-canvas" style="position: absolute; width: 414px; height: 552px;" tabindex="0" aria-label="Map" width="1080" height="1440"></canvas>
</div>
Another way to reproduce the issue is
- unclick position: absolute, The map disappears.
- then reactivate it. The map is invisible
- until there's panning going on and the map reappears.
- with webrender on, same results
- This doesn't happen on fennec
Updated•5 years ago
|
Comment 1•5 years ago
|
||
NI-ing Kris to look at for wr android prioritization
Comment 2•5 years ago
|
||
If this doesn't happen on Fennec it would be super-useful to have a regression range.
Comment 3•5 years ago
|
||
Happens on geckoview as well.
I've tried finding a regression window with Geckoview builds, but seems like the first working builds available (from 2019-04-01) reproduce the issue as well.
@lsalzman: Any ideas what could be going on here?
Updated•5 years ago
|
Comment 4•5 years ago
|
||
Bugbug thinks this bug is a regression, but please revert this change in case of error.
Comment 5•5 years ago
|
||
@sotaro: Jamie told me you might know this a bit better. Do you have any hints on what this could be. Feels like a missing event.
| Assignee | ||
Comment 6•5 years ago
|
||
It might related to Bug 1606549. I am going to look into it this week.
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
I could reproduce the bug. I am going to look into it.
| Assignee | ||
Comment 8•5 years ago
•
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #6)
It might related to Bug 1606549. I am going to look into it this week.
Sorry, Bug 1606549 is not related to this bug. This bug is not specific to WebRender.
| Assignee | ||
Comment 9•5 years ago
•
|
||
There were 2 problems.
-[1] CanvasClientSharedSurface did not handle a case that CanvasClientSharedSurface was re-created, but GLScreenBuffer was not re-created.
-[2] RenderCompositorEGL::Pause() detaches all SurfaceTesxtures, but RenderAndroidSurfaceTextureHostOGL did not handle it.
- With CompositorOGL, [2] was handled
| Assignee | ||
Comment 10•5 years ago
|
||
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Comment 12•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 13•5 years ago
|
||
Verified as fixed following comment 0, on latest Fenix Nightly build 77.0a1 - 5/7.
Devices: Samsung Galaxy Note 10(Android 10), Nokia 6 (Android 7.1.1).
Description
•