gfx/webrender_bindings/RenderCompositorEGL.cpp
@@ -103,6 +103,7 @@ void RenderCompositorEGL::Pause() {
 #ifdef MOZ_WIDGET_ANDROID
   java::GeckoSurfaceTexture::DestroyUnused((int64_t)gl());
   java::GeckoSurfaceTexture::DetachAllFromGLContext((int64_t)gl());
+  RenderThread::Get()->NotifyAllAndroidSurfaceTexturesDetatched();
 #endif
   DestroyEGLSurface();
 }
